[package]
name = "dlnaproxy"
version = "0.2.6"
authors = ["Nic0w"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
lto = true

[dependencies]
httparse = "1.8.0"
timer = { git = "https://github.com/Yoric/timer.rs", branch = "master" }
chrono = "0.4.23"
clap = { version = "4.0.32", features = ["derive"] }
nix = "0.26.1"
fern = "0.6.1"
ctrlc = "3.2.4"
toml = "0.5.10"

[dependencies.log]
version = "0.4.17"
features = ["std"]

[dependencies.reqwest]
default-features = false
version = "0.11.13"
features = ["blocking"]

[dependencies.serde]
version = "1.0.152"
features = ["derive"]

[dependencies.quick-xml]
version = "0.27.1"
features = ["serialize"]
